[package]
name = "imaginary"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_cpus = "1.15.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
dotenv = "0.15.0"
env_logger = "0.10.0"
actix-web = "4.3.1"
reqwest = "0.11.22"
image = "0.24.7"

[profile.release]
opt-level = 3
lto = true
strip = true
