[package]
name = "imaginary"
version = "0.1.0"
edition = "2021"
authors = ["Grigory Latyshev"]
description = "A Rust HTTP server that converts images on the fly"
repository = "https://github.com/thegriglat/imaginary"
homepage = "https://github.com/thegriglat/imaginary"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_cpus = "1.15.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
dotenv = "0.15.0"
env_logger = "0.10.0"
actix-web = "4.3.1"
reqwest = "0.11.22"
image = "0.24.7"
regex = "1.10.2"

[profile.release]
opt-level = 3
lto = true
strip = true
