[package]
name = "imaginary"
version = "0.1.0"
edition = "2021"
authors = ["Grigory Latyshev"]
description = "A Rust HTTP server that converts images on the fly"
repository = "https://github.com/thegriglat/imaginary"
homepage = "https://github.com/thegriglat/imaginary"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_cpus = "1.15.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
dotenv = "0.15.0"
reqwest = "0.11.22"
image = { version = "0.24.7", features = ["jpeg", "png", "avif-encoder", "avif", "webp-encoder"] }
regex = "1.10.2"
axum = { version = "0.6.20", features = ["headers"] }
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing = "0.1.40"

[profile.release]
opt-level = 3
lto = true
strip = true
